style(OnlinePlayerItem): fix spacing between admin level and shield icon

--- a/src/components/Pages/ServersPage/AllServers/GameType/ServerCard/ServerCardPlayersSection/OnlinePlayersList/OnlinePlayerItem/OnlinePlayerItem.module.scss
+++ b/src/components/Pages/ServersPage/AllServers/GameType/ServerCard/ServerCardPlayersSection/OnlinePlayersList/OnlinePlayerItem/OnlinePlayerItem.module.scss
@@ -33,7 +33,7 @@
 .playerPing {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 5px;
   font-size: .9rem;
   font-weight: 600;
   user-select: text;
